# WCHLSentinel

./: README  README.md  package-lock.json  package.json  run-all-dev.js  tailwind.config.js
ai-proctoring/src/: main.py
ai-proctoring/src/detection/: face_detector.py
backend/: package.json
backend/icp/: Cargo.toml  dfx.json
backend/icp/scripts/: setup_icp.sh
backend/icp/src/face_recognition/: Cargo.toml  face_recognition.did  lib.rs
backend/icp/src/face_recognition/src/: lib.rs
backend/src/: app.js  config.js  seedData.js
backend/src/controllers/: examController.js  userController.js
backend/src/middleware/: adminAuth.js  auth.js  errorMiddleware.js  faceVerification.js  validation.js
backend/src/models/: Exam.js  ExamSession.js  User.js
backend/src/routes/: examRoutes.js  userRoutes.js
backend/src/scriptsss/: add_faces.py  datasetcollection.py  demo.py  training.py
backend/src/services/: aiProctoringService.js  blockchainService.js  icpFaceRecognitionService.js
backend/src/utils/: logger.js  seedExams.js
blockchain/contracts/: CertificateNFT.sol
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: CertificateView.jsx  Navbar.jsx  PreExam.jsx  Timer.jsx
frontend/src/pages/: Dashboard.jsx  ExamRoom.jsx  Login.jsx  Result.jsx
smart-agent/agent/: verification_agent.js
