[package]
name = "face_recognition"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.10"
ic-cdk-timers = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"

# ONNX runtime and image processing
tract-onnx = "0.20"
tract-core = "0.20"
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
ndarray = "0.15"

# Async runtime
tokio = { version = "1.0", features = ["macros", "rt"] }

# Logging
log = "0.4"

[dependencies.getrandom]
version = "0.2"
features = ["custom"]

[profile.release]
opt-level = 3
lto = true
debug = false
strip = true