[package]
name = "face_recognition"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.17"
ic-cdk = "0.13.1"
ic-cdk-timers = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
log = "0.4"

[dependencies.getrandom]
version = "0.2"
features = ["custom"]

[profile.release]
opt-level = 3
lto = true
debug = false
strip = true
panic = "abort"

[profile.dev]
panic = "abort"
